--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,25 +1,31 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+<nav class="navbar navbar-expand-md bg-body navbar-dark shadow-sm fixed-top">
   <div class="container-fluid">
-    <%= link_to "JOURNAL", root_path, class: 'navbar-brand' %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <%= link_to(root_path) do %>
+      <p class='navbar-brand text-primary m-0 px-4'>
+        <i class="fas fa-sticky-note mx-2"></i><span class='text-secondary'>take</span><strong>note.</strong>
+      </p>
+    <% end %>
+    <button class="navbar-toggler text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon">
+        <i class="fas fa-bars"></i>
+      </span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Tasks", tasks_path, class: 'nav-link' %>
+          <%= link_to "Tasks", tasks_path, class: "nav-link text-primary mx-2 #{current_class?(tasks_path)}" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Categories", categories_path, class: 'nav-link' %>
+          <%= link_to "Categories", categories_path, class: "nav-link text-primary mx-2 #{current_class?(categories_path)}" %>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <% if current_user %>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <%= current_user.email %>
+            <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fas fa-user"></i>
             </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-end bg-primary" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="<%= edit_user_registration_path %>">Account Settings</a>
               <hr class="dropdown-divider">
               <%= link_to 'Logout', destroy_user_session_path, class: 'dropdown-item', method: :delete %>
@@ -27,10 +33,10 @@
           </li>
         <% else %>
           <li class="nav-item my-2">
-            <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary mx-2' %>
+            <%= link_to "Log In", new_user_session_path, class: 'btn btn-outline-light text-dark mx-2' %>
           </li>
           <li class="nav-item my-2">
-            <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-outline-light' %>
+            <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %>
           </li>
         <% end %>
       </ul>
